# sdk-sample-project

./: .gitignore  COPYING  README.md  com.example.MyProject.yml  meson.build
data/: com.example.MyProject.appdata.xml.in  com.example.MyProject.desktop.in  com.example.MyProject.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES
src/: main.in  main.py  meson.build  my-project.gresource.xml  window.py  window.ui
